--- a/Home_page/src/app/features/Home_page/components/category-list/category-list.component.html
+++ b/Home_page/src/app/features/Home_page/components/category-list/category-list.component.html
@@ -1,1 +1,14 @@
-<p>category-list works!</p>
+<div class="container mt-5">
+  <h2 class="mb-4">Shop by Category</h2>
+  <div class="row">
+    <div class="col-md-4 mb-3" *ngFor="let cat of categories">
+      <div class="card h-100 text-center shadow-sm">
+        <img [src]="cat.image" class="card-img-top" alt="{{ cat.name }}">
+        <div class="card-body">
+          <h5 class="card-title">{{ cat.name }}</h5>
+          <button class="btn btn-outline-success">Explore</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
