--- a/Home_page/src/app/features/Home_page/pages/home/home.component.html
+++ b/Home_page/src/app/features/Home_page/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<app-search-bar></app-search-bar>
+<app-hero></app-hero>
+<app-category-list></app-category-list>   
+<app-product-grid></app-product-grid>
