--- a/Home_page/src/app/features/Home_page/components/search-bar/search-bar.component.css
+++ b/Home_page/src/app/features/Home_page/components/search-bar/search-bar.component.css
@@ -1,7 +1,9 @@
 .search-input {
   width: 100%;
+  max-width: 1860px;
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 25px;
+  
 }
