Mid implmented Home page with Navbar and Footer components

--- a/Home_page/src/app/app.html
+++ b/Home_page/src/app/app.html
@@ -1,18 +1,3 @@
-<nav class="navbar">
-  <div class="navbar-brand">
-    <a href="/">🛒 AskMart</a>
-  </div>
-  <div class="navbar-links">
-    <a href="/">Home</a>
-    <a href="/categories">Categories</a>
-    <a href="/products"> Featured Products</a>
-  </div>
-  <div class="navbar-cart">
-    <button class="cart-btn">
-      <i class="fas fa-shopping-cart">🛒</i>
-      <span class="cart-count">0</span>
-    </button>
-  </div>
-</nav>
-
+<app-navbar></app-navbar>
 <app-home></app-home>
+<app-footer></app-footer>
