--- a/Home_page/src/app/features/Home_page/components/product-grid/product-grid.component.html
+++ b/Home_page/src/app/features/Home_page/components/product-grid/product-grid.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <h2 class="mb-4">Featured Products</h2>
+<div class="container">
+  <h2 class="FeaturedProducts">Featured Products</h2>
   <div class="products-grid">
     <div class="product-card" *ngFor="let product of products">
       <div class="card h-100 shadow-sm">
