--- a/Home_page/src/app/shared/components/navbar/navbar.html
+++ b/Home_page/src/app/shared/components/navbar/navbar.html
@@ -1,1 +1,17 @@
-<p>navbar works!</p>
+<nav class="navbar">
+  <div class="navbar-brand">
+    <a href="/">
+      <img src="askmart_logo.png" alt="AskMart Logo" class="logo">AskMart</a>
+  </div>
+  <div class="navbar-links">
+    <a href="/">Home</a>
+    <a href="/categories">Categories</a>
+    <a href="/products">Featured Products</a>
+  </div>
+  <div class="navbar-cart">
+    <button class="cart-btn">
+      <i class="fas fa-shopping-cart">🛒</i>
+      <span class="cart-count">0</span>
+    </button>
+  </div>
+</nav>
