--- a/Home_page/src/app/features/Home_page/components/category-list/category-list.component.html
+++ b/Home_page/src/app/features/Home_page/components/category-list/category-list.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h2 class="mb-4">Shop by Category</h2>
+  <h2 class="Shopcategory">Shop by Category</h2>
   <div class="categories-grid">
     <div class="category-card" *ngFor="let cat of categories">
       <img [src]="cat.image" alt="{{ cat.name }}">
