floating chatbot button

--- a/Home_page/src/app/features/Home_page/pages/home/home.component.html
+++ b/Home_page/src/app/features/Home_page/pages/home/home.component.html
@@ -2,3 +2,4 @@
 <app-hero></app-hero>
 <app-category-list></app-category-list>   
 <app-product-grid></app-product-grid>
+<app-chatbot-button></app-chatbot-button>
