dark mode toggle

--- a/Home_page/src/app/features/Home_page/components/product-grid/product-grid.component.html
+++ b/Home_page/src/app/features/Home_page/components/product-grid/product-grid.component.html
@@ -7,7 +7,33 @@
         <div class="card-body text-center">
           <h5 class="card-title">{{ product.name }}</h5>
           <p class="text-muted">${{ product.price }}</p>
-          <button class="btn btn-success">Add to Cart</button>
+          <!-- From Uiverse.io by prikshit_1236 --> 
+<input hidden="" class="cart-toggle" id="cart-toggle" type="checkbox" />
+<label class="cart-button" for="cart-toggle">
+  <span class="cart-icon">
+    <svg
+      stroke-linejoin="round"
+      stroke-linecap="round"
+      stroke-width="2"
+      stroke="currentColor"
+      fill="none"
+      viewBox="0 0 24 24"
+      height="24"
+      width="24"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <circle r="1" cy="21" cx="9"></circle>
+      <circle r="1" cy="21" cx="20"></circle>
+      <path
+        d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"
+      ></path>
+    </svg>
+  </span>
+
+  Add to Cart
+  <div class="progress-bar"></div>
+</label>
+
         </div>
       </div>
     </div>
