--- a/Home_page/src/app/shared/components/navbar/navbar.html
+++ b/Home_page/src/app/shared/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="navbar-brand">
     <a href="/">
-      <img src="askmart_logo.png" alt="AskMart Logo" class="logo">AskMart</a>
+      <img src="/askmart_logo.png" alt="AskMart Logo" class="logo">AskMart</a>
   </div>
   <div class="navbar-links">
     <a href="/">Home</a>
