--- a/Home_page/src/app/shared/components/chatbot-button/chatbot-button.component.css
+++ b/Home_page/src/app/shared/components/chatbot-button/chatbot-button.component.css
@@ -8,7 +8,7 @@
   background: #22c55e; /* green */
   color: white;
   border: none;
-  background: #22c55e url("chatbot.png") no-repeat center/100%;
+  background: #22c55e url("/chatbot.png") no-repeat center/100%;
   outline: none;
   font-size: 24px;
   display: flex;
