--- a/Home_page/src/app/features/Home_page/components/search-bar/search-bar.component.css
+++ b/Home_page/src/app/features/Home_page/components/search-bar/search-bar.component.css
@@ -3,9 +3,10 @@
   max-width: 1860px;
   padding: 10px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--input-border);
   border-radius: 25px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  
+  margin: 10px 0;
+  background-color: var(--input-bg);
+  color: var(--input-text);
+  transition: background 0.3s, color 0.3s, border 0.3s;
 }
