--- a/Home_page/src/app/shared/components/navbar/navbar.html
+++ b/Home_page/src/app/shared/components/navbar/navbar.html
@@ -11,7 +11,7 @@
   <!-- From Uiverse.io by JustCode14 --> 
 <div class="toggle-container">
     <label class="switch">
-  <input checked="true" id="checkbox" type="checkbox" />
+  <input checked="true" id="checkbox" type="checkbox" (click)="toggleDarkMode()"/>
   <span class="slider">
     <div class="star star_1"></div>
     <div class="star star_2"></div>
