--- a/Authentication/src/app/app.component.html
+++ b/Authentication/src/app/app.component.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <app-authentication></app-authentication>
+  <router-outlet></router-outlet>
 </body>
 </html>
