--- a/Authentication/src/app/features/auth/components/login/login.component.html
+++ b/Authentication/src/app/features/auth/components/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<div class="login-page">
+<div class="login-container">
+    <h1>Login</h1>
+    <form>
+        <input type="text" placeholder="Email" />
+        <input type="password" placeholder="Password" />
+        <button type="submit">Login</button>
+        <p>Don’t have an account? 
+        <a href="signup">Sign Up</a>
+        </p>
+    </form>
+</div>
+</div>
+
+
+<!-- <img src="https://i.postimg.cc/CLNfdt20/Supermarket-Shoppers-and-Robots-in-Action.png" alt="login" srcset=""> -->
+
