--- a/Authentication/src/app/features/auth/components/login/login.component.html
+++ b/Authentication/src/app/features/auth/components/login/login.component.html
@@ -6,7 +6,8 @@
         <input type="password" placeholder="Password" />
         <button type="submit">Login</button>
         <p>Don’t have an account? 
-        <a href="signup">Sign Up</a>
+        <a href="signup">Sign Up</a> <br>
+        <a href="forgotpassword">forgot password?</a>
         </p>
     </form>
 </div>
