Home and login merged

--- a/Home_page/src/app/features/Home_page/pages/home/home.component.html
+++ b/Home_page/src/app/features/Home_page/pages/home/home.component.html
@@ -1,5 +1,7 @@
+<app-navbar></app-navbar>
 <app-search-bar></app-search-bar>
 <app-hero></app-hero>
 <app-category-list></app-category-list>   
 <app-product-grid></app-product-grid>
 <app-chatbot-button></app-chatbot-button>
+<app-footer></app-footer>
