--- a/Home_page/src/app/features/auth/components/login/login.component.html
+++ b/Home_page/src/app/features/auth/components/login/login.component.html
@@ -4,10 +4,12 @@
     <form>
         <input type="text" placeholder="Email" />
         <input type="password" placeholder="Password" />
+        <a href="home">
         <button type="submit">Login</button>
+        </a>
         <p>Don’t have an account? 
         <a href="signup">Sign Up</a> <br>
-        <a href="forgotpassword">forgot password?</a>
+        <a href="forgotpassword">Forgot password?</a>
         </p>
     </form>
 </div>
