--- a/Home_page/src/app/features/Products/Pages/product-list/product-list.component.html
+++ b/Home_page/src/app/features/Products/Pages/product-list/product-list.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="project-list-container">
   <app-product-filter (filterChanged)="onFilterChanged($event)"></app-product-filter>
 
@@ -9,3 +11,4 @@
     </app-product-card>
   </div>
 </div>
+<app-footer></app-footer>
