--- a/Home_page/src/app/features/auth/components/signup/signup.component.html
+++ b/Home_page/src/app/features/auth/components/signup/signup.component.html
@@ -4,8 +4,8 @@
         <form action="">
             <input type="text" placeholder="Username">
             <input type="email" placeholder="Email">
-            <input type="password" placeholder="password">
-            <input type="password" placeholder="confirm password">
+            <input type="password" placeholder="Password">
+            <input type="password" placeholder="Confirm password">
             <button class="signup">Sign Up</button>
             <a href="login">Already have an account? Login</a>
         </form>
