chatbot initial design

--- a/Home_page/src/app/shared/components/chatbot-button/chatbot-button.component.html
+++ b/Home_page/src/app/shared/components/chatbot-button/chatbot-button.component.html
@@ -1,2 +1,35 @@
 <!-- Floating AI Assistant Button -->
-<button class="fab"></button>
+<button class="fab" (click)="toggleChat()"></button>
+
+<div class="chat-window" *ngIf="isOpen">
+  <div class="chat-header">
+    <span>Askie</span>
+    <button class="close-btn" (click)="toggleChat()">✖</button>
+  </div>
+
+  <div class="chat-body">
+    <div *ngFor="let msg of messages" class="chat-msg">
+      {{ msg }}
+    </div>
+  </div>
+
+  <div class="chat-footer">
+    <input
+      type="text"
+      [(ngModel)]="newMessage"
+      placeholder="Type a message..."
+      (keydown.enter)="sendMessage()"
+    />
+    <button (click)="sendMessage()">
+    <div class="svg-wrapper-1">
+        <div class="svg-wrapper">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+            <path fill="none" d="M0 0h24v24H0z"></path>
+            <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
+        </svg>
+        </div>
+    </div>
+    <span>Send</span>
+    </button>
+  </div>
+</div>
