--- a/Home_page/src/app/features/cart/components/cart-summary/cart-summary.component.css
+++ b/Home_page/src/app/features/cart/components/cart-summary/cart-summary.component.css
@@ -20,7 +20,7 @@
 .checkout-btn {
   width: 100%;
   padding: 12px;
-  background-color: #ff007a; /* matches your screenshot */
+  background-color: #138033; /* matches your screenshot */
   border: none;
   border-radius: 24px;
   font-size: 16px;
@@ -30,5 +30,5 @@
 }
 
 .checkout-btn:hover {
-  background-color: #e6006e;
+  background-color: #0b5b23
 }
